added news section and manage files

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 @theme{
-    --color-description-500: rgba(40, 40, 40, 0.977);
+    --color-description: rgba(40, 40, 40, 0.977);
 
 }
   
