--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,45 @@
 
 }
   
-  
+.animate{
+    animation: scrollAnimate 20s infinite  linear;
+    left:-200px;
+    
+}
+
+@keyframes scrollAnimate{
+    100%{
+        left: 100%;
+    }   
+}
+
+.animateStop {
+    animation-play-state: paused;
+  }
+
+.item1 {
+    animation-delay: calc(20s / 8 * (8 - 7) * -1);
+}
+.item2 {
+    animation-delay: calc(20s / 8 * (8 - 6) * -1);
+}
+.item3 {
+    animation-delay: calc(20s / 8 * (8 - 5) * -1);
+}
+.item4 {
+    animation-delay: calc(20s / 8 * (8 - 4) * -1);
+}
+.item5 {
+    animation-delay: calc(20s / 8 * (8 - 3) * -1);
+}
+.item6 {
+    animation-delay: calc(20s / 8 * (8 - 2) * -1);
+}
+.item7 {
+    animation-delay: calc(20s / 8 * (8 - 1) * -1);
+}
+.item8 {
+    animation-delay: calc(20s / 8 * (8 - 0) * -1);
+}
+
+
